# internal/api/faces_search.go
@@ -14,7 +14,18 @@ import (
 
 // SearchFaces finds and returns faces as JSON.
 //
-// GET /api/v1/faces
+//	@Summary	finds and returns faces as JSON
+//	@Id			SearchFaces
+//	@Tags		Faces
+//	@Produce	json
+//	@Success	200					{object}	search.FaceResults
+//	@Failure	400,401,403,429,404	{object}	i18n.Response
+//	@Param		count				query		int		true	"maximum number of results"	minimum(1)	maximum(100000)
+//	@Param		offset				query		int		false	"search result offset"		minimum(0)	maximum(100000)
+//	@Param		order				query		string	false	"sort order"				Enums(subject, added, samples)
+//	@Param		hidden				query		string	false	"show hidden"				Enums(yes, no)
+//	@Param		unknown				query		string	false	"show unknown"				Enums(yes, no)
+//	@Router		/api/v1/faces [get]
 func SearchFaces(router *gin.RouterGroup) {
 	router.GET("/faces", func(c *gin.Context) {
 		s := Auth(c, acl.ResourcePeople, acl.ActionSearch)
